<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 United States Government as represented by the Administrator of the
  ~ National Aeronautics and Space Administration. All Rights Reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basic_globe_activity"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_basic_globe"/>
        <item
            android:id="@+id/nav_wms_layer_activity"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/title_wms_layer"/>
        <item
            android:id="@+id/nav_wmts_layer_activity"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="WMTS Layer"/>
        <item
            android:id="@+id/nav_wcs_elevation_activity"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="WCS Elevation Coverage"/>
        <item
            android:id="@+id/nav_geopackage_activity"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/title_geopackage"/>
        <item
            android:id="@+id/nav_surface_image_activity"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/title_surface_image"/>
        <item
            android:id="@+id/nav_omnidirectional_sightline_activity"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/title_omni_sightline"/>
        <item
            android:id="@+id/nav_camera_view_activity"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/title_camera_view"/>
        <item
            android:id="@+id/nav_look_at_view_activity"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/title_look_at_view"/>
        <item
            android:id="@+id/nav_navigator_event_activity"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/title_navigator_event"/>
        <item
            android:id="@+id/nav_placemarks_activity"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/title_placemarks"/>
        <item
            android:id="@+id/nav_placemarks_picking_activity"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/title_placemarks_picking"/>
        <item
            android:id="@+id/nav_paths_activity"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/title_paths"/>
        <item
            android:id="@+id/nav_polygons_activity"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/title_polygons"/>
        <item
            android:id="@+id/nav_labels_activity"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/title_labels"/>
        <item
            android:id="@+id/nav_shapes_dash_and_fill"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/title_shapes_dash_and_fill"/>
        <item
            android:id="@+id/nav_camera_control_activity"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/title_camera_controls"/>
        <item
            android:id="@+id/nav_show_tessellation_activity"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/title_show_tessellation"/>
    </group>

</menu>
